<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.covert.verify360.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:progress="25"
            android:visibility="gone"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_verify_360"
            android:scaleType="fitCenter"
            android:src="@drawable/verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_text"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="10dp"
            android:textColor="@color/edittext_textcolor"
            android:hint="@string/label_username"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/circle_bg"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            />


        <EditText
            android:inputType="textPassword"
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/secondary_text_dark"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/edittext_textcolor"
            android:background="@drawable/circle_bg"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rememberme_layout"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            app:layout_constraintStart_toStartOf="@+id/password_text"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            android:orientation="horizontal">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rememberme_sw"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_remme"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/rememberme_textview"/>


        </LinearLayout>
        <ImageButton
            android:id="@+id/button_login"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_2"
            android:src="@drawable/ic_open_in_browser_black_24dp"
            android:rotation="90"
            android:tint="@color/colorPrimary"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/rememberme_layout"
            app:layout_constraintStart_toStartOf="@+id/rememberme_layout"
            app:layout_constraintTop_toBottomOf="@+id/rememberme_layout"
            android:textColor="@android:color/black"
             />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
